Correcao dos botoes

--- a/src/style.css
+++ b/src/style.css
@@ -96,11 +96,13 @@ hr{
 }
 .conteudo__ligacao__botao__video, .conteudo__ligacao__botao__audio{
     border: 0;
+    width: 38vw;
     font-family: var(--font-principal);
     font-weight: 500;
     font-size: 0.87rem;
     border-radius: 8px;
-    padding: 1.3em 1.3em;
+    padding-top: 1.3em;
+    padding-bottom: 1.3em;
     margin-bottom: 1.2em;
     margin-top: 0.3em;
 }
